Fixed the SideBar Menu to collapse. Increased Font of sideBar and Add DropDown Menu.

--- a/Alis4Ops2024.Web/Layout/NavMenu.razor.css
+++ b/Alis4Ops2024.Web/Layout/NavMenu.razor.css
@@ -1,6 +1,19 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    appearance: none;
+    cursor: pointer;
+    width: 3.5rem;
+    height: 2.5rem;
+    color: white;
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
 }
+
+    .navbar-toggler:checked {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 
 .top-row {
     height: 3.5rem;
@@ -35,7 +48,7 @@
 
 .nav-item {
     font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.1rem;
 }
 
     .nav-item:first-of-type {
@@ -46,38 +59,63 @@
         padding-bottom: 1rem;
     }
 
-    .nav-item ::deep a {
+    .nav-item ::deep .nav-link {
         color: #d7d7d7;
+        background: none;
+        border: none;
         border-radius: 4px;
         height: 3rem;
         display: flex;
         align-items: center;
         line-height: 3rem;
+        width: 100%;
+
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.37);
-    color: white;
+    .nav-item ::deep a.active {
+        background-color: rgba(255,255,255,0.37);
+        color: white;
+    }
+
+    .nav-item ::deep .nav-link:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }
+
+.nav-scrollable {
+    display: none;
 }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
+.navbar-toggler:checked ~ .nav-scrollable {
+    display: block;
 }
 
 @media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
+    .sidebar {
+        width: 250px;
+        height: 100vh;
+        position: sticky;
+        top: 0;
+
     }
 
-    .collapse {
+        .sidebar .nav-item {
+            font-size: 1.5rem; /* You can adjust the font size here */
+        }
+
+        .navbar-toggler {
+            display: none;
+
+        }
+
+    .nav-scrollable {
         /* Never collapse the sidebar for wide screens */
         display: block;
-    }
-    
-    .nav-scrollable {
         /* Allow sidebar to scroll for tall menus */
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
+    }
+    .navbar-collapse .nav-item {
+        font-size:24px /* Your desired font size */; /* Adjust this */
     }
 }
